--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
             <artile id="right">
                 <section>
                     <h2>경력(work)</h2>
+                    <div><a href="index.html">빈링크</a></div>
+
+                    
                     <!-- 경력 내용 수정 -->
                     <dl>
                         <dt>1차 Project</dt>
