--- a/main.html
+++ b/main.html
@@ -117,7 +117,7 @@
 
     <section id="section2">
         
-        <div class="gd_button"><a href="index.html">빈링크</a></div>
+        <div class="gd_button"><a href="#">빈링크</a></div>
 
         <div class="gd_contianer">
             <h1 class="ys_typingtext"></h1>
