인덱스 변경 소스추가중

--- a/index.html
+++ b/index.html
@@ -1,7 +1,4 @@
-<!--
-  2023.03.27 ~ 2023.04.04
-  Coding by Gyeongdon Kim, Yeonseo Jang, Jinyong Choi, Sujin Lim 
--->
+<!--  Coding by Gyeongdon Kim -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -14,15 +11,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-    <link href="main.css" rel="stylesheet">
+    <link href="index.css" rel="stylesheet">
 
-
-
-    <!-- 헤더 연결 -->
-    <script>
-        $(document).ready(function () {
-            $(".header").load("JKC_mainHeader.html")
-        }) </script>
 
     <!-- 모든 페이지 적용: 한 페이지씩 이동하는 이벤트 -->
     <script>
@@ -116,8 +106,10 @@
     </section>
 
     <section id="section2">
+
+        <div class="pf_img"><img src="pf.png" alt="프로필 이미지"></div>
         
-        <div class="gd_button"><a href="#">빈링크</a></div>
+        <!-- <div class="gd_button"><a href="main.html">START</a></div> -->
 
         <div class="gd_contianer">
             <h1 class="ys_typingtext"></h1>
@@ -194,6 +186,13 @@
 
     <section id="section3">
 
+        <div class="gd_contianer3">
+            <div class="gd_box">111</div>
+            <div class="gd_box">222</div>
+            <div class="gd_box">333</div>
+            <div class="gd_box">444</div>
+            <div class="gd_box">555</div>
+        </div>
 
       
     </section>
