--- a/main.html
+++ b/main.html
@@ -1,8 +1,5 @@
-<!--
-  2023.03.27 ~ 2023.04.04
-  Coding by Gyeongdon Kim, Yeonseo Jang, Jinyong Choi, Sujin Lim 
--->
-
+<!--  Coding by Gyeongdon Kim -->
+ 
 <!DOCTYPE html>
 <html lang="en">
 
