--- a/index.html
+++ b/index.html
@@ -189,12 +189,12 @@
 
         <div class="gd_contianer3">
             <div class="gd_Imgbox">
-                <button class="gd_box front"></button>
-                <button class="gd_box back"></button>
-                <button class="gd_box top"></button>
-                <button class="gd_box bottom"></button>
-                <button class="gd_box left"></button>
-                <button class="gd_box right"></button>
+                <button class="gd_box front" onclick="location.href='main.html'"></button>
+                <button class="gd_box back" onclick="location.href='main.html'"></button>
+                <button class="gd_box top" onclick="location.href='main.html'"></button>
+                <button class="gd_box bottom" onclick="location.href='main.html'"></button>
+                <button class="gd_box left" onclick="location.href='main.html'"></button>
+                <button class="gd_box right" onclick="location.href='main.html'"></button>
             </div>
         </div>
 
