--- a/main.html
+++ b/main.html
@@ -11,19 +11,16 @@
 
 </head>
 <body>
-    <div class="gd_contianer3">
-        <div class="gd_Imgbox">
-            <button class="gd_box front">front</button>
-            <button class="gd_box back">back</button>
-            <button class="gd_box top">top</button>
-            <button class="gd_box bottom">bottom</button>
-            <button class="gd_box left">left</button>
-            <button class="gd_box right">right</button>
-        </div>
+   <div class="gd_mainContainer">
+    <div class="gd_nav">
+
+        <img src="pf.png">
+        <img src="pf.png">
+        <img src="pf.png">
+        <img src="pf.png">
     </div>
 
-
-    
+   </div>
     
 </body>
 </html>
