이미지 경로 수정

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             </div>
         </div>
 
-        <span class="side_img"><img id="gd_sidename" src="gd.png"></span>
+        <span class="side_img"><img id="gd_sidename" src="./gd.png"></span>
 
 
     </section>
