이미지 깨짐 수정

--- a/main.html
+++ b/main.html
@@ -10,14 +10,18 @@
     <link href="main.css" rel="stylesheet">
 
 </head>
-<body>
-   <div class="gd_mainContainer">
-    <div class="gd_nav">
+<body style="background-color: aquamarine;">
 
-        <img src="pf.png">
-        <img src="pf.png">
-        <img src="pf.png">
-        <img src="pf.png">
+   <div class="gd_mainContainer">
+    <div class="portfolio">
+        <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sedlpa qui officia deserunt mollit anim idipisicing elit, sedlpa qui officia deserunt mollit anim idipisicing elit, sedlpa qui officia deserunt mollit anim idipisicing elit, sedlpa qui officia deserunt mollit anim id est laborum.....</div><br>
+        <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sedlpa qui officia deserunt mollit anim id est laborum.....</div><br>
+        <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sedlpa qui officia deserunt mollit anim id est laborum.....</div><br>
+        <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sedlpa qui officia deserunt mollit anim id est laborum.....</div><br>
+        <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sedlpa qui officia deserunt mollit anim id est laborum.....</div><br>
+        <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sedlpa qui officia deserunt mollit anim id est laborum.....</div><br>
+
+       
     </div>
 
    </div>
