--- a/index.html
+++ b/index.html
@@ -189,16 +189,24 @@
 
         <div class="gd_contianer3">
             <div class="gd_Imgbox">
-                <button class="gd_box front" onclick="location.href='main.html'"></button>
-                <button class="gd_box back" onclick="location.href='main.html'"></button>
-                <button class="gd_box top" onclick="location.href='main.html'"></button>
-                <button class="gd_box bottom" onclick="location.href='main.html'"></button>
+                <button class="gd_box front" onclick="location.href='jkc.html'">
+                <span class="gd_jkc">JKC</span>
+            </button>
+                <button class="gd_box back" onclick="location.href='coffee.html'">
+                <span class="gd_coffee">COFFEE</span>
+            </button>
+                <button class="gd_box top" onclick="location.href='gg.html'">
+                <span class="gd_gg">G.G</span>
+            </button>
+                <button class="gd_box bottom" onclick="location.href='main.html'">
+                <span class="gd_ko">K.O</span>
+            </button>
                 <button class="gd_box left" onclick="location.href='main.html'"></button>
                 <button class="gd_box right" onclick="location.href='main.html'"></button>
             </div>
         </div>
 
-        <span class="side_img"><img id="gd_sidename" src="gd.png"></span>
+        <span id="gd_sidename">GyeongDon</span>
 
 
     </section>
