--- a/index.html
+++ b/index.html
@@ -15,174 +15,7 @@
 
 
     <!-- 모든 페이지 적용: 한 페이지씩 이동하는 이벤트 -->
-    <script>
-        //    <!-- 기본 이벤트 제거: 휠을 굴렸을 때 스크롤이 되지 않도록 -->
-        window.addEventListener("wheel", function (e) {
-            e.preventDefault();
-        }, { passive: false });
-
-        // <!-- 참조하는 요소 미리 탐색 및 선언 -->
-
-        var $html = $("html");
-        // 뷰포트에 표시되는 페이지의 번호
-        var page = 1;
-        // 마지막 페이지의 번호
-        var lastPage = $("section").length;
-        // 페이지가 로드되면 첫 페이지 시작
-        $html.animate({ scrollTop: 0 }, 10);
-
-        // 이벤트 핸들러로 마우스 휠을 굴리면 발생하는 이벤트
-        $(window).on("wheel", function (e) {
-            // 아래에서 호출된 .animate 메서드로 생성된 스크롤 효과가 쌓이지 않도록
-            // 스크롤이 진행되는 동안 발생하는 wheel 이벤트 무시
-            if ($html.is(":animated")) return;
-            // e(jquery가 반환) .originalEvent(자바스크립트 원래 이벤트)
-            // .deltaY(마우스 휠을 어느 방향으로 얼만큼 굴렸는지)-> 양수이면 아래쪽으로 굴린 것,
-            // 음수이면 위쪽으로 굴린 것
-            if (e.originalEvent.deltaY > 0) {
-                // 마지막 페이지인 경우 이벤트 핸들러 종료
-                if (page == lastPage) return;
-                // 스크롤 아래로 했을경우 페이지+1, 위로 올릴 경우 -1씩
-                page++;
-            } else if (e.originalEvent.deltaY < 0) {
-                if (page == 1) return;
-
-                page--;
-            }
-            // 이동할 페이지의 번호에 스크롤 할 위치 계산
-            var posTop = (page - 1) * $(window).height();
-            // 계산한 위치로 이동
-            $html.animate({ scrollTop: posTop });
-
-        });
-    </script>
-
-</head>
-
-
-
-<div class="header"></div>
-
-<body>
-
-    <section id="section1" style="margin: 0;
-    padding: 0;
-    width: 100vw;
-    height: 100vh;
-    overflow: hidden;
-    position: relative;
-    background: #FFB1A4;
-
-    display: flex;
-    align-items: center;
-    ">
-        <div class="blob">
-            <!-- This SVG is from https: //codepen.io/Ali_Farooq_/pen/gKOJqx -->
-            <svg xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 310 350">
-                <path
-                    d="M156.4,339.5c31.8-2.5,59.4-26.8,80.2-48.5c28.3-29.5,40.5-47,56.1-85.1c14-34.3,20.7-75.6,2.3-111  c-18.1-34.8-55.7-58-90.4-72.3c-11.7-4.8-24.1-8.8-36.8-11.5l-0.9-0.9l-0.6,0.6c-27.7-5.8-56.6-6-82.4,3c-38.8,13.6-64,48.8-66.8,90.3c-3,43.9,17.8,88.3,33.7,128.8c5.3,13.5,10.4,27.1,14.9,40.9C77.5,309.9,111,343,156.4,339.5z" />
-            </svg>
-        </div>
-        <h1 style="color: white;
-    font-size: 10vmin;
-    line-height: 1;
-    font-weight: bold;
-    letter-spacing: 2px;
-    font-family: 'Poppins',
-    sans-serif;
-    text-transform: uppercase;
-    padding-left: 40px;
-    ">개발자 김경돈의<br>Portfolio 입니다</h1>
-    </section>
-    <section id="section2" style="
-  position: relative;
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  overflow: hidden;">
-
-
-    </section>
-
-    <section id="section2">
-
-
-        <!-- <div class="gd_button"><a href="main.html">START</a></div> -->
-
-        <div class="gd_contianer">
-            <div class="pf_img"><img id="pf2" src="pf.png" alt="프로필 이미지"></div>
-
-            <h1 class="ys_typingtext"></h1>
-        </div>
-
-
-        <script>
-            const $ys_typingtext = document.querySelector(".ys_typingtext");
-
-            // 글자 모음 - 개행문자(\n)로 줄바꿈
-            const letters = [
-                "안녕하세요 \n 주니어 개발자 김경돈 입니다",
-                "심플하고 가독성 있는 코드를 선호하고 \n 다양한 기술 스텍에 관심이 많습니다",
-                "애자일한 개발을 추구하며 \n 코딩할때 커피는 필수라고 생각합니다"
-            ];
-
-            // 글자 입력 속도
-            const speed = 100;
-            let i = 0;
-
-            // 줄바꿈을 위한 <br> 치환
-            const changeLineBreak = (letter) => {
-                return letter.map(ys_typingtext => ys_typingtext === "\n" ? "<br>" : ys_typingtext);
-            }
-
-            // 타이핑 효과
-            const typing = async () => {
-                // 기존코드에서 개행치환코드 추가
-                const letter = changeLineBreak(letters[i].split(""));
-
-                while (letter.length) {
-                    await wait(speed);
-                    $ys_typingtext.innerHTML += letter.shift();
-                }
-
-                // 잠시 대기
-                await wait(800);
-
-                // 지우는 효과
-                remove();
-            }
-
-            // 글자 지우는 효과
-            const remove = async () => {
-                // 기존코드에서 개행치환코드 추가
-                const letter = changeLineBreak(letters[i].split(""));
-
-                while (letter.length) {
-                    await wait(speed);
-
-                    letter.pop();
-                    $ys_typingtext.innerHTML = letter.join("");
-                }
-
-                // 다음 순서의 글자로 지정, 타이핑 함수 다시 실행
-                i = !letters[i + 1] ? 0 : i + 1;
-                typing();
-            }
-
-            // 딜레이 기능 ( 마이크로초 )
-            function wait(ms) {
-                return new Promise(res => setTimeout(res, ms))
-            }
-
-            // 초기 실행
-            setTimeout(typing, 1500);
-        </script>
-
-
-
-
-    </section>
+  
 
 
     <section id="section3">
@@ -198,11 +31,13 @@
                 <button class="gd_box top" onclick="location.href='gg.html'">
                 <span class="gd_gg">G.G</span>
             </button>
-                <button class="gd_box bottom" onclick="location.href='main.html'">
-                <span class="gd_ko">K.O</span>
+                <button class="gd_box bottom" onclick="location.href='https://github.com/doni3134';">
+                <span class="gd_git">Git-Hub</span>
             </button>
-                <button class="gd_box left" onclick="location.href='main.html'"></button>
-                <button class="gd_box right" onclick="location.href='main.html'"></button>
+                <button class="gd_box left" onclick="location.href='profile.html'">
+                    <span class="gd_pf">PROFILE</span></button>
+                <button class="gd_box right" onclick="location.href='#'">
+                    <span class="gd_ko"></span></button>
             </div>
         </div>
 
