--- a/profile.html
+++ b/profile.html
@@ -87,7 +87,7 @@
     line-height: 1;
     font-weight: bold;
     letter-spacing: 2px;
-    font-family: 'Poppins',
+    font-family: 'HCRDotum',
     sans-serif;
     text-transform: uppercase;
     padding-left: 40px;
