--- a/gg.html
+++ b/gg.html
@@ -29,7 +29,7 @@
             몬스터 변경(몬스터의 체력에 따라공격 방식 세분화)
         </div>
         <div>
-            <a href="https://github.com/doni3134/Java-Study" color="rgb(249, 196, 98)">G.G_PROJECT_(https://github.com/doni3134/HTML5)</a>
+            <a href="https://github.com/doni3134/Java-Study" color="rgb(249, 196, 98)">G.G_PROJECT_(https://github.com/doni3134/Java-Study)</a>
         </div>
     
        
