--- a/jkc.html
+++ b/jkc.html
@@ -17,7 +17,7 @@
         <div class="JKC_Head">JKC_PROJECT</div>
         <div class="JKC_Tech">Tech Stack : HTML5 CSS3 JavaScript</div>
         <div class="JKC_img1">
-            <img src="JCK.png" alt width="700px" height="418px">
+            <img src="JKC.PNG" alt width="700px" height="418px">
         </div>
         <div class="JKC_div">JKC란 중요한건 꺾이지 않는 코딩 이라는 뜻으로 JKC기업 홈페이지 레이아웃을 HTML5, CSS3, JavaScript 를 이용해 간단하게 제작한 프로젝트입니다.</div>
         <div class="JKC_div">본 프로젝트의 팀장과 팀원을 나누는 과정에서 우리 팀은 실력으로 팀장을 선출하는 것이 아니라 서로 팀장의 역할을 한번씩 경험해 보자는 의미에서 돌아가며 팀장을 해보기로 했고 팀장의 실력이 부족할 경우 팀원들이 도와주며 프로젝트를 진행하기로 했습니다.<br></div>
